--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,30 @@
-
+*{
+    padding: 0;
+    margin: 0;
+}
 body {
-    background-color: rgb(234, 234, 234);
-    color: #000;
+    background-color: #a94747;
+    color: antiquewhite;
 
 }
+.container-pb-10-pt-10 {
+    background-color: #c76969;
+    color: antiquewhite;
+}
+.pb-2-border-bottom {
+    padding-left: 10px 5px;
+    background-color: black;
+    color: antiquewhite;
+}
 .btn-primary:hover {
-    background-color: #008CBA;
+    background-color: #eaeff0;
     color: white;
+  }
+  .btn-primary {
+    background-color: black;
+    color: antiquewhite;
+  }
+  .text-body-secondary {
+    font-weight: 600;
+    padding-left: 10px 5px ;
   }
